[project]
name = "wangzhan"
version = "0.1.0"
description = ""
authors = [
    {name = "Rayleigh Xu",email = "rayleighxu7@live.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false